# transit

./: .bandit.yaml  .env.dev  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  main.py  mypy.ini  requirements.txt  setup.cfg
app/static/: styles.css
app/templates/: all_errors.html  base.html  imports_top.html  nav_bar.html  routes.html  routes_table.html  stops.html  stops_table.html
app/web/: environment.py  factory.py  globals.py  models.py  pytest.ini  utils.py  views.py
tests/: conftest.py  test_views.py
utils/: format.sh  jinjaninja-check.sh  pre-commit.sh  pytest-with-coverage.sh  pytest.sh  run-dev.sh
