[metadata]
name = Transit App
version = 1.0
description = Everything needed for Transit App
long_description = file: README.md
long_description_content_type = text/markdown
author = Teddy Williams
author_email = theodore.f.williams@gmail.com


# Configurations
[flake8]
# Note: can ignore an individual line's errors with # noqa at end of line (inline)

# ---- Errors for flake8 to ignore ----
ignore =

  # Line break before binary operator
  # (Black uses this sometimes for cleaner looking when splitting large lines)
  W503,

# ---- Files for flake8 to exclude ----
exclude =
  venv,
  tmp

# ---- Maximum number of characters per line ----
# (80 chars is too short. Soft cap line length at 100 chars, hard cap at 120)
max-line-length = 120

[isort]
# These changes reconcile isort with black
virtual_env = venv
skip_glob = venv/*
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
